--- a/css/menuBas.css
+++ b/css/menuBas.css
@@ -26,6 +26,8 @@
     align-items: center;
     padding: 0;
     margin: 0;
+    white-space: nowrap; /* Empêche le passage à la ligne des éléments */
+
   }
 
   .nav-item {
